# framework

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md
cmake/: FindCrypto++.cmake  FindSQLite_3.cmake  android.cmake  linux.cmake  print_configuration.cmake  windows.cmake
example/client/: CMakeLists.txt
example/client/src/: CMakeLists.txt  clientapp.cpp  clientapp.h  declarations.h  global.cpp  global.h  main.cpp  protocolapp.cpp  protocolapp.h
example/client/src/core/: 0_BRIEF_EXPLANATION.txt
example/client/src/modules/: CMakeLists.txt  config.py  protocol.cpp  ui.cpp
example/client/src/modules/chat/: __init__.py
example/client/src/modules/chat/tools/: text.py
example/modules/: CMakeLists.txt  init.cpp  init.h  signal.py  ui.cpp  ui.h
example/server/: CMakeLists.txt
example/server/src/: CMakeLists.txt  declarations.h  global.cpp  global.h  main.cpp  protocolapp.cpp  protocolapp.h  serverapp.cpp  serverapp.h
example/server/src/core/: CMakeLists.txt
example/server/src/modules/: CMakeLists.txt  app_window.cpp  db.cpp  fast_script.cpp  protocol.cpp  stats.cpp  ui.cpp
example/server/src/modules/chat/: manager.py
src/cmsext/: CMakeLists.txt  app.cpp  app.h  cmsext.h  db.cpp  db.h  declarations.h  gui.cpp  gui.h  log.cpp  log.h  module.cpp  module.h  net.cpp  net.h  thread.cpp  thread.h  widget.cpp  widget.h
src/framework/: CMakeLists.txt  bindmodules.cpp  global.cpp  global.h  pch.h
src/framework/core/: application.h  applicationbase.cpp  applicationbase.h  applicationconsole.cpp  applicationconsole.h  applicationgraphical.cpp  applicationgraphical.h  autoid.h  declarations.h  logger.cpp  logger.h  signal.h  traceinfo.h
src/framework/crypt/: crypt.cpp  crypt.h  declarations.h  rsa.cpp  rsa.h
src/framework/database/: declarations.h  mainmanager.cpp  mainmanager.h  mariadbmanager.cpp  mariadbmanager.h  mysqlmanager.cpp  mysqlmanager.h  sqlitemanager.cpp  sqlitemanager.h  sqlmanager.cpp  sqlmanager.h
src/framework/multimedia/: color.cpp  color.h  declarations.h  fontmanager.cpp  fontmanager.h  imagemanager.cpp  imagemanager.h  point.h  rect.h  rectsides.h  size.h  soundmanager.cpp  soundmanager.h  texturemanager.cpp  texturemanager.h  window.cpp  window.h
src/framework/net/: connection.cpp  connection.h  declarations.h  inputmessage.cpp  inputmessage.h  manager.cpp  manager.h  networkmessage.cpp  networkmessage.h  outputmessage.cpp  outputmessage.h  protocol.cpp  protocol.h  tcpclient.cpp  tcpclient.h  tcplistener.cpp  tcplistener.h
src/framework/platform/: declarations.h  platform.h
src/framework/platform/android/: platform.cpp
src/framework/platform/linux/: platform.cpp
src/framework/platform/windows/: platform.cpp
src/framework/pymodule/: 0_BRIEF_EXPLANATION.txt  callback.cpp  callback.h  declarations.h  manager.cpp  manager.h  module.cpp  module.h  signalmanager.cpp  signalmanager.h
src/framework/thread/: declarations.h  event.cpp  event.h  eventmanager.cpp  eventmanager.h  eventpoll.cpp  eventpoll.h  lookafter.h
src/framework/time/: clock.cpp  clock.h  declarations.h  stopper.cpp  stopper.h  time.cpp  time.h  timer.cpp  timer.h
src/framework/util/: declarations.h  file.cpp  file.h  math.cpp  math.h
